// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders correctly 1`] = `
<DocumentFragment>
  .cache-8i4h07 {
  margin-top: 40px;
}

.cache-sfdutq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-ag7udt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-7t3mr9 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151A2D;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.cache-7t3mr9.cache-7t3mr9 {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.cache-1nntuhh {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #D4DAE7;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #D4DAE7;
  opacity: inherit;
  cursor: default;
}

.cache-1nntuhh>* {
  margin-top: 0;
}

.cache-1nntuhh>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt2 cache-8i4h07"
  >
    <div
      class="e1l6meh00 cache-sfdutq e1l6meh01"
    >
      <div
        class="elb23zt1 e1l6meh00 cache-ag7udt e1l6meh01"
      >
        <h2
          class="e1g1zfwd0 cache-7t3mr9"
        >
          Title
        </h2>
      </div>
      <div />
    </div>
    <div
      class="cache-1nntuhh elb23zt0"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly on edition mode 1`] = `
<DocumentFragment>
  .cache-8i4h07 {
  margin-top: 40px;
}

.cache-sfdutq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-ag7udt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-7t3mr9 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151A2D;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.cache-7t3mr9.cache-7t3mr9 {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.cache-8i7ozu {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #D4DAE7;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #4F0599;
  opacity: inherit;
  cursor: default;
}

.cache-8i7ozu>* {
  margin-top: 0;
}

.cache-8i7ozu>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt2 cache-8i4h07"
  >
    <div
      class="e1l6meh00 cache-sfdutq e1l6meh01"
    >
      <div
        class="elb23zt1 e1l6meh00 cache-ag7udt e1l6meh01"
      >
        <h2
          class="e1g1zfwd0 cache-7t3mr9"
        >
          Title
        </h2>
      </div>
      <div />
    </div>
    <div
      class="cache-8i7ozu elb23zt0"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-8i4h07 {
  margin-top: 40px;
}

.cache-sfdutq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-ag7udt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-7t3mr9 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151A2D;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.cache-7t3mr9.cache-7t3mr9 {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.cache-ea0z8c {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #D4DAE7;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #D4DAE7;
  opacity: 0.4;
  cursor: not-allowed;
}

.cache-ea0z8c>* {
  margin-top: 0;
}

.cache-ea0z8c>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt2 cache-8i4h07"
  >
    <div
      class="e1l6meh00 cache-sfdutq e1l6meh01"
    >
      <div
        class="elb23zt1 e1l6meh00 cache-ag7udt e1l6meh01"
      >
        <h2
          class="e1g1zfwd0 cache-7t3mr9"
        >
          Title
        </h2>
      </div>
      <div />
    </div>
    <div
      class="cache-ea0z8c elb23zt0"
      disabled=""
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly with small variant 1`] = `
<DocumentFragment>
  .cache-8i4h07 {
  margin-top: 40px;
}

.cache-sfdutq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-ag7udt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-7t3mr9 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151A2D;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.cache-7t3mr9.cache-7t3mr9 {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.cache-nmkr2q {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #D4DAE7;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 16px;
  padding-bottom: 16px;
  border: 1px solid #D4DAE7;
  opacity: inherit;
  cursor: default;
}

.cache-nmkr2q>* {
  margin-top: 0;
}

.cache-nmkr2q>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt2 cache-8i4h07"
  >
    <div
      class="e1l6meh00 cache-sfdutq e1l6meh01"
    >
      <div
        class="elb23zt1 e1l6meh00 cache-ag7udt e1l6meh01"
      >
        <h2
          class="e1g1zfwd0 cache-7t3mr9"
        >
          Title
        </h2>
      </div>
      <div />
    </div>
    <div
      class="cache-nmkr2q elb23zt0"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;
